edit members page

--- a/_sass/_team.scss
+++ b/_sass/_team.scss
@@ -2,6 +2,8 @@
 
 .team-member {
   margin-bottom: $grid-gutter-width;
+  margin-right: 1.5rem;
+  margin-left: 1.5rem;
   display: inline-block;
 
   // Image container
