--- a/_includes/card.html
+++ b/_includes/card.html
@@ -1,14 +1,25 @@
+{% if item.background.first %}
+  {% assign background = item.background.img %}
+{% else %}
+  {% assign background = item.background %}
+{% endif %}
 
-<div class="card">
-
+<div class="card" data-tags="{% for tag in item.tags %}{{ tag | downcase | strip }}|{% endfor %}">
+  <a href="{{ item.url | relative_url }}">
+    {% if item.background %}
+      <img class="card-img-top" src="{{ background | relative_url }}" alt="Background image">  
+    {% else %}
+      <div class="card-img-top bg-secondary"></div>
+    {% endif %}
+  </a>
 
   <div class="card-body position-relative">
-    <!-- <h6 class="card-title">
-      {{ item.title }}
-    </h6> -->
+    <h5 class="card-title">
+      <a class="stretched-link" href="{{ item.url | relative_url }}">{{ item.title }}</a>
+    </h5>
 
     {% if item.collection == 'posts' %}
-      <h7 class="card-subtitle">{{ item.date | date: '%B %d, %Y' }}</h7>
+      <h6 class="card-subtitle">{{ item.date | date: '%B %d, %Y' }}</h6>
     {% endif %}
 
     <div class="card-text">
@@ -20,4 +31,11 @@
     </div>
   </div>
 
+  {% if item.collection == 'posts' and item.tags and site.archive_permalink %}
+    <div class="card-footer">
+      {% for tag in item.tags %}
+        <a class="badge{% if site.rounded_corners != false %} rounded-pill{% endif %}" href="{{ site.archive_permalink | relative_url }}?tag={{ tag | url_encode }}">{{ tag }}</a>
+      {% endfor %}
+    </div>
+  {% endif %}
 </div>
