modify news section

--- a/_includes/card.html
+++ b/_includes/card.html
@@ -5,21 +5,22 @@
 {% endif %}
 
 <div class="card" data-tags="{% for tag in item.tags %}{{ tag | downcase | strip }}|{% endfor %}">
-  <a href="{{ item.url | relative_url }}">
+  <!-- <a href="{{ item.url | relative_url }}">
     {% if item.background %}
       <img class="card-img-top" src="{{ background | relative_url }}" alt="Background image">  
     {% else %}
       <div class="card-img-top bg-secondary"></div>
     {% endif %}
-  </a>
+  </a> -->
 
   <div class="card-body position-relative">
-    <h5 class="card-title">
-      <a class="stretched-link" href="{{ item.url | relative_url }}">{{ item.title }}</a>
-    </h5>
+    <h6 class="card-title">
+      <!-- <a class="stretched-link" href="{{ item.url | relative_url }}">{{ item.title }}</a> -->
+      {{ item.title }}
+    </h6>
 
     {% if item.collection == 'posts' %}
-      <h6 class="card-subtitle">{{ item.date | date: '%B %d, %Y' }}</h6>
+      <h7 class="card-subtitle">{{ item.date | date: '%B %d, %Y' }}</h7>
     {% endif %}
 
     <div class="card-text">
