--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -17,24 +17,25 @@ remark: See also page.layout == 'home' in head.html and header.html.
 
       </div>
 
-      {% if two_col %}
+      <!-- {% if two_col %}
         <div class="col-lg-4">
           <a class="twitter-timeline" data-height="500" data-link-color="{{ site.colors.links }}" href="https://twitter.com/{{ site.social.twitter }}?ref_src=twsrc%5Etfw">
             Tweets by {{ site.social.twitter }}
           </a>
           <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
-      {% endif %}
-    </div>
-    
-    {% if site.posts_on_home > 0 %}
-      <div class="row cards mt-4">
+      {% endif %} -->
+      {% if site.posts_on_home > 0 %}
+      <div class="col-lg-4 cards">
         <h3 style="display:inline-flex;">NEWS</h3>
         {% for item in site.posts limit:site.posts_on_home %}
-          <div class="col-md-6{% if two_col %} col-lg-4{% endif %}">
+          <div>
             {% include card.html %}
           </div>
         {% endfor %}
       </div>
     {% endif %}
+    </div>
+    
+   
 </div>
