--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -50,7 +50,7 @@ description: Template for team page.
 
         {% if member.twitter %}
           <li class="list-inline-item">
-            <a href="https://twitter.com/{{ member.twitter }}"><i class="fab fa-twitter"></i></a>
+            <a href="https://twitter.com/{{ member.twitter }}"><i class="fab fa-x-twitter"></i></a>
           </li>
         {% endif %}
 
@@ -69,6 +69,12 @@ description: Template for team page.
         {% if member.email %}
           <li class="list-inline-item">
             <a href="mailto:{{ member.email }}"><i class="far fa-envelope"></i></a>
+          </li>
+        {% endif %}
+
+        {% if member.linkedin %}
+          <li class="list-inline-item">
+            <a href="https://www.linkedin.com/in/{{ member.linkedin }}"><i class="fab fa-linkedin"></i></a>
           </li>
         {% endif %}
       </ul>
