changing twitter icon

--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -50,7 +50,7 @@ description: Template for team page.
 
         {% if member.twitter %}
           <li class="list-inline-item">
-            <a href="https://twitter.com/{{ member.twitter }}"><i class="fab fa-x-twitter"></i></a>
+            <a href="https://twitter.com/{{ member.twitter }}"><i class="fab fa-twitter"></i></a>
           </li>
         {% endif %}
 
