--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -77,6 +77,12 @@ description: Template for team page.
             <a href="https://www.linkedin.com/in/{{ member.linkedin }}"><i class="fab fa-linkedin"></i></a>
           </li>
         {% endif %}
+
+        {% if member.youtube %}
+          <li class="list-inline-item">
+            <a href="https://www.youtube.com/c/{{ member.youtube }}"><i class="fab fa-youtube"></i></a>
+          </li>
+        {% endif %}
       </ul>
     </div>
   </div>
