--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -11,7 +11,7 @@ description: Template for team page.
   {% assign research_assistants = site.data.researchassistants %}
 {% endif %}
 
-{{ content }}
+<h2>Directors</h2>
 
 {% for member in team %}
   <div class="col-md-4 col-lg-3 col-sm-8 team-member">
@@ -100,6 +100,8 @@ description: Template for team page.
     </div>
   </div>
 {% endfor %}
+
+<h2>Research Assistants</h2>
 
 {% for member in research_assistants %}
   <div class="col-md-4 col-lg-3 col-sm-8 team-member">
