--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -14,90 +14,91 @@ description: Template for team page.
 <h2>Directors</h2>
 
 {% for member in directors %}
-  <div class="col-md-4 col-lg-3 col-sm-8 team-member">
-
-    <div class="flex-shrink-0 mx-auto">
-      {% if member.image %}
-        <img src="{{ member.image | relative_url }}" alt="{{ member.name }}">
-      {% endif %}
-    </div>
-    <div>
-      {% if member.website %}
-        <a href="{{ member.website }}" style="text-align: center;">
-          <h5 id="{{ member.name | strip | url_encode }}">
+  <div class="col-md-4 col-lg-3 col-sm-6 team-member">
+    <div class="member-container">
+      <div class="flex-shrink-0 mx-auto">
+        {% if member.image %}
+          <img src="{{ member.image | relative_url }}" alt="{{ member.name }}" class="img-fluid">
+        {% endif %}
+      </div>
+      <div>
+        {% if member.website %}
+          <a href="{{ member.website }}" style="text-align: center;">
+            <h5 id="{{ member.name | strip | url_encode }}">
+              {{ member.name }}
+              {% if member.role %}
+                <small class="text-muted">| {{ member.role }}</small>
+              {% endif %}
+            </h5>
+          </a>
+        {% else %}
+          <h5 id="{{ member.name | strip | url_encode }}" style="text-align: center;">
             {{ member.name }}
             {% if member.role %}
               <small class="text-muted">| {{ member.role }}</small>
             {% endif %}
           </h5>
-        </a>
-      {% else %}
-        <h5 id="{{ member.name | strip | url_encode }}" style="text-align: center;">
-          {{ member.name }}
-          {% if member.role %}
-            <small class="text-muted">| {{ member.role }}</small>
+        {% endif %}
+
+        {{ member.description | markdownify }}
+
+        <ul class="list-inline">
+          {% if member.email %}
+            <li class="list-inline-item">
+              <a href="mailto:{{ member.email }}"><i class="far fa-envelope"></i></a>
+            </li>
           {% endif %}
-        </h5>
-      {% endif %}
 
-      {{ member.description | markdownify }}
+          {% if member.orcid %}
+            <li class="list-inline-item">
+              <a href="https://orcid.org/{{ member.orcid }}"><i class="ai ai-orcid"></i></a>
+            </li>
+          {% endif %}
 
-      <ul class="list-inline">
-        {% if member.email %}
-          <li class="list-inline-item">
-            <a href="mailto:{{ member.email }}"><i class="far fa-envelope"></i></a>
-          </li>
-        {% endif %}
+          {% if member.researchgate %}
+            <li class="list-inline-item">
+              <a href="https://researchgate.net/profile/{{ member.researchgate }}"><i class="ai ai-researchgate"></i></a>
+            </li>
+          {% endif %}
+          
+          {% if member.googlescholar %}
+            <li class="list-inline-item">
+              <a href="https://scholar.google.com/citations?user={{ member.googlescholar }}"><i class="ai ai-google-scholar"></i></a>
+            </li>
+          {% endif %}
 
-        {% if member.orcid %}
-          <li class="list-inline-item">
-            <a href="https://orcid.org/{{ member.orcid }}"><i class="ai ai-orcid"></i></a>
-          </li>
-        {% endif %}
+          {% if member.twitter %}
+            <li class="list-inline-item">
+              <a href="https://twitter.com/{{ member.twitter }}"><i class="fab fa-twitter"></i></a>
+            </li>
+          {% endif %}
 
-        {% if member.researchgate %}
-          <li class="list-inline-item">
-            <a href="https://researchgate.net/profile/{{ member.researchgate }}"><i class="ai ai-researchgate"></i></a>
-          </li>
-        {% endif %}
-        
-        {% if member.googlescholar %}
-          <li class="list-inline-item">
-            <a href="https://scholar.google.com/citations?user={{ member.googlescholar }}"><i class="ai ai-google-scholar"></i></a>
-          </li>
-        {% endif %}
+          {% if member.youtube %}
+            <li class="list-inline-item">
+              <a href="https://www.youtube.com/c/{{ member.youtube }}"><i class="fab fa-youtube"></i></a>
+            </li>
+          {% endif %}
 
-        {% if member.twitter %}
-          <li class="list-inline-item">
-            <a href="https://twitter.com/{{ member.twitter }}"><i class="fab fa-twitter"></i></a>
-          </li>
-        {% endif %}
+          {% if member.mastodon %}
+            <li class="list-inline-item">
+              <a href="{{ member.mastodon }}"><i class="fab fa-mastodon"></i></a>
+            </li>
+          {% endif %}
 
-        {% if member.youtube %}
-          <li class="list-inline-item">
-            <a href="https://www.youtube.com/c/{{ member.youtube }}"><i class="fab fa-youtube"></i></a>
-          </li>
-        {% endif %}
+          {% if member.github %}
+            <li class="list-inline-item">
+              <a href="https://github.com/{{ member.github }}"><i class="fab fa-github"></i></a>
+            </li>
+          {% endif %}
 
-        {% if member.mastodon %}
-          <li class="list-inline-item">
-            <a href="{{ member.mastodon }}"><i class="fab fa-mastodon"></i></a>
-          </li>
-        {% endif %}
+          {% if member.linkedin %}
+            <li class="list-inline-item">
+              <a href="https://www.linkedin.com/in/{{ member.linkedin }}"><i class="fab fa-linkedin"></i></a>
+            </li>
+          {% endif %}
 
-        {% if member.github %}
-          <li class="list-inline-item">
-            <a href="https://github.com/{{ member.github }}"><i class="fab fa-github"></i></a>
-          </li>
-        {% endif %}
-
-        {% if member.linkedin %}
-          <li class="list-inline-item">
-            <a href="https://www.linkedin.com/in/{{ member.linkedin }}"><i class="fab fa-linkedin"></i></a>
-          </li>
-        {% endif %}
-
-      </ul>
+        </ul>
+      </div>
     </div>
   </div>
 {% endfor %}
@@ -105,7 +106,7 @@ description: Template for team page.
 <h2>Ph.D. Students</h2>
 
 {% for member in phds %}
-  <div class="col-md-4 col-lg-3 col-sm-8 team-member">
+  <div class="col-md-4 col-lg-3 col-sm-6 team-member">
 
     <div class="flex-shrink-0 mx-auto">
       {% if member.image %}
