--- a/_sass/_team.scss
+++ b/_sass/_team.scss
@@ -5,14 +5,15 @@
   margin-right: 1.5rem;
   margin-left: 1.5rem;
   display: inline-block;
+  text-align: center;
 
   // Image container
   .flex-shrink-0 {
     width: 100px;
     
     img {
-      height: 100px;
-      width: 100px;
+      height: auto;
+      width: 100%;
       border: 3px solid $gray-200;
       border-radius: 100px;
     }
@@ -23,4 +24,14 @@
     width: 16px;
     margin-top: -3px;
   }
+  .member-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
 }
+
+
+
+
