--- a/_sass/_team.scss
+++ b/_sass/_team.scss
@@ -5,15 +5,14 @@
   margin-right: 1.5rem;
   margin-left: 1.5rem;
   display: inline-block;
-  text-align: center;
 
   // Image container
   .flex-shrink-0 {
     width: 100px;
     
     img {
-      height: auto;
-      width: 100%;
+      height: 100px;
+      width: 100px;
       border: 3px solid $gray-200;
       border-radius: 100px;
     }
@@ -24,14 +23,20 @@
     width: 16px;
     margin-top: -3px;
   }
-  .member-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
+}
+.team-member .member-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
+.team-member img {
+  width: 100%; /* or a fixed width, e.g., 200px */
+  height: auto;
+}
 
-
+/* Optional: to ensure the text is also aligned */
+.team-member h5 {
+  text-align: center;
+}
 
