--- a/_sass/_team.scss
+++ b/_sass/_team.scss
@@ -28,11 +28,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-.team-member img {
-  width: 100%; /* or a fixed width, e.g., 200px */
-  height: auto;
+  height: inherit;
 }
 
 /* Optional: to ensure the text is also aligned */
