--- a/_sass/_team.scss
+++ b/_sass/_team.scss
@@ -11,10 +11,13 @@
     width: 100px;
     
     img {
-      height: 100px;
+      //height: 100px;
       width: 100px;
       border: 3px solid $gray-200;
       border-radius: 100px;
+      height: auto;
+      display: block;
+      object-fit: cover;
     }
   }
 
@@ -28,7 +31,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: inherit;
 }
 
 /* Optional: to ensure the text is also aligned */
