--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -15,7 +15,7 @@ description: Template for team page.
 
 {% for member in directors %}
   <div class="col-md-4 col-lg-3 col-sm-6 team-member">
-    <div class="member-container">
+    <div class="member-container" style="text-align: center;">
       <div class="flex-shrink-0 mx-auto">
         {% if member.image %}
           <img src="{{ member.image | relative_url }}" alt="{{ member.name }}" class="img-fluid">
@@ -23,7 +23,7 @@ description: Template for team page.
       </div>
       <div>
         {% if member.website %}
-          <a href="{{ member.website }}" style="text-align: center;">
+          <a href="{{ member.website }}">
             <h5 id="{{ member.name | strip | url_encode }}">
               {{ member.name }}
               {% if member.role %}
@@ -32,7 +32,7 @@ description: Template for team page.
             </h5>
           </a>
         {% else %}
-          <h5 id="{{ member.name | strip | url_encode }}" style="text-align: center;">
+          <h5 id="{{ member.name | strip | url_encode }}">
             {{ member.name }}
             {% if member.role %}
               <small class="text-muted">| {{ member.role }}</small>
