--- a/_includes/card.html
+++ b/_includes/card.html
@@ -5,13 +5,13 @@
 {% endif %}
 
 <div class="card" data-tags="{% for tag in item.tags %}{{ tag | downcase | strip }}|{% endfor %}">
-  <a href="{{ item.url | relative_url }}">
+  <!-- <a href="{{ item.url | relative_url }}">
     {% if item.background %}
       <img class="card-img-top" src="{{ background | relative_url }}" alt="Background image">  
     {% else %}
       <div class="card-img-top bg-secondary"></div>
     {% endif %}
-  </a>
+  </a> -->
 
   <div class="card-body position-relative">
     <h6 class="card-title">
