--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,9 +9,9 @@ remark: See also page.layout == 'home' in head.html and header.html.
 {% endif %}
 
 <div class="row">
-  <div class="{% if two_col %}col{% else %}col-md-10 col-lg-8 mx-auto{% endif %}">
-    <div class="row">
-      <div class="col">
+  <div class="col-md-10 col-lg-8 mx-auto">
+    <div class="row" style="flex-wrap: nowrap !important">
+      <div class="col-md-12 col-lg-10">
 
         {{ content }}
 
@@ -25,23 +25,23 @@ remark: See also page.layout == 'home' in head.html and header.html.
           <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
       {% endif %} -->
-      
-    </div>
-    {% if page.news and site.data[page.news] %}
+      {% if page.news and site.data[page.news] %}
       {% assign news = site.data[page.news] %}
     {% elsif site.data.news %}
       {% assign news = site.data.news %}
     {% endif %}
     {% if site.posts_on_home > 0 %}
-    <div class="row cards mt-3">
+    <div class="cards mt-3">
       <h4>NEWS</h4>
       {% for item in news limit:site.posts_on_home %}
-        <div class="col-md-6  col-lg-3">
+        <div class="col-md-4  col-lg-4">
           {% include card.html %}
         </div>
       {% endfor %}
     </div>
     {% endif %}
+    </div>
+    
     
    
 </div>
