--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-10 col-lg-8 position-relative mx-auto">
-          <h1{% if page.layout == 'home' %} class="home"{% endif %}>{{ page.title }}</h1>
+          <h1{% if page.layout == 'home' %} class="home"{% endif %} style="font-family: cursive">{{ page.title }}</h1>
           
           <div class="lead">{{ page.description | markdownify }}</div>
           
