--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -49,7 +49,7 @@
   }
   
   h1 {
-    $header-h1: 5rem;
+    $header-h1: 4rem;
     font-size: $header-h1;
     font-weight: 800;
 
@@ -64,7 +64,7 @@
   }
 
   .lead {
-    font-size: ($lead-font-size * 2.5);
+    font-size: ($lead-font-size * 1.7);
   }
 
   .meta {
@@ -106,4 +106,26 @@
       text-decoration: none;
     }
   }
+}
+.huge-logo{
+  position: absolute;
+  float: right;
+  right: 100px;
+  top: 141px;
+  // width: 300px;
+}
+@media screen and (max-width: 800px) {
+  .huge-logo {
+      display: none;
+  }
+}
+
+.petite-intro{
+  font-family: cursive;
+  margin: 30px 0;
+  font-weight: 500;
+  border: 7px;
+  border-style: none none none solid;
+  padding-left: 15px;
+  border-color: #6183f5;
 }
