--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,12 +7,12 @@ remark: See also page.layout == 'home' in head.html and header.html.
 {% if site.tweets_on_home and site.social.twitter %}
   {% assign two_col = true %}
 {% endif %}
-<div class="petite-intro">
+<!-- <div class="petite-intro">
   <p>
     Hey there!<span class="wave">👋</span>
   </p>
   We are the DONUTS!
-</div>
+</div> -->
 <img class="huge-logo" src="/assets/theme/images/logo.png">
 <div class="row">
   <div class="{% if two_col %}col{% else %}col-md-10 col-lg-8 mx-auto{% endif %}">
