--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -7,7 +7,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   border-radius: 0; // Should always be square, independent from $enable-rounded
-  color: $white;
+  color: $black;
   margin-bottom: 2rem;
   // padding: 2rem 1rem;
   padding-top: 6rem;
