--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,7 +13,7 @@ remark: See also page.layout == 'home' in head.html and header.html.
   </p>
   We are the DONUTS!
 </div> -->
-<img class="huge-logo" src="/assets/theme/images/logo.png">
+<img class="huge-logo" style="z-index: 1000;" src="/assets/theme/images/logo.png">
 <div class="row">
   <div class="{% if two_col %}col{% else %}col-md-10 col-lg-8 mx-auto{% endif %}">
     <div class="row">
