--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -5,10 +5,10 @@ description: Template for team page.
 
 
 {% if page.team and site.data[page.team] %}
-  {% assign phdstudents = site.data[page.phds] %}
+  {% assign phdstudents = site.data[page.phdstudents] %}
   {% assign directors = site.data[page.directors] %}
 {% elsif site.data.team %}
-  {% assign phdstudents = site.data[page.phds] %}
+  {% assign phdstudents = site.data[page.phdstudents] %}
   {% assign directors = site.data[page.directors] %}
 {% endif %}
 
