--- a/_layouts/publications.html
+++ b/_layouts/publications.html
@@ -11,7 +11,7 @@ description: Default template for pages and posts, with contained width.
 
     {% if page.comments %}
       <div id="disqus_thread"></div>
-      <script>
+<!--       <script>
         // Configuration variables: https://disqus.com/admin/universalcode/#configuration-variables
         var disqus_config = function () {
           this.page.url = "{{ page.url | absolute_url }}";
@@ -22,7 +22,7 @@ description: Default template for pages and posts, with contained width.
           s.setAttribute("data-timestamp", +new Date());
           (d.head || d.body).appendChild(s);
         })();
-      </script>
+      </script> -->
       <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
     {% endif %}
   </div>
