--- a/_layouts/publications.html
+++ b/_layouts/publications.html
@@ -27,3 +27,12 @@ description: Default template for pages and posts, with contained width.
     {% endif %}
   </div>
 </div>
+<script>
+function showContent(id) {
+  var contents = document.getElementsByClassName('content');
+  for (var i = 0; i < contents.length; i++) {
+    contents[i].style.display = 'none';
+  }
+  document.getElementById(id).style.display = 'block';
+}
+</script>
