--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -25,3 +25,13 @@
 
   </body>
 </html>
+            <script>
+function showContent(id) {
+  var contents = document.getElementsByClassName('content');
+  for (var i = 0; i < contents.length; i++) {
+    contents[i].style.display = 'none';
+  }
+  document.getElementById(id).style.display = 'block';
+}
+</script>
+            
