--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -112,7 +112,7 @@
   </div>
 </footer>
 
-<script src="{{ '/assets/theme/js/anchor.min.js' | relative_url }}"></script>
+<!-- <script src="{{ '/assets/theme/js/anchor.min.js' | relative_url }}"></script>
 <script>
   // Show anchors when hovering over headings, using anchor.js
   (function () {
@@ -121,3 +121,4 @@
     anchors.add(headings);
   })();
 </script>
+ -->
