--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -9,7 +9,7 @@
     <main>
       {% include header.html %}
 
-<!--       <div class="container content"> -->
+      <div class="container content">
 
           
         {{ content
@@ -18,7 +18,7 @@
           | replace: '<table>', '<table class="table">'
         }}
 
-<!--       </div> -->
+      </div>
     </main>
 
     {% include footer.html %}
