--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -31,7 +31,7 @@ remark: See also page.layout == 'home' in head.html and header.html.
         {% assign news = site.data.news %}
       {% endif %}
       {% if site.posts_on_home > 0 %}
-      <h1 style="">NEWS</h1>
+      <h2>NEWS</h2>
 
       <div class="col-lg-4 cards" style="margin-top:30px">
         {% for item in news limit:site.posts_on_home %}
