--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,7 +32,7 @@ remark: See also page.layout == 'home' in head.html and header.html.
       {% endif %}
       {% if site.posts_on_home > 0 %}
       <div>
-        <h2 style="inline"></h2>
+        <h2 style="display:inline">NEWS</h2>
       </div>
 
       <div class="col-lg-4 cards" style="margin-top:30px">
