--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -31,7 +31,7 @@ remark: See also page.layout == 'home' in head.html and header.html.
         {% assign news = site.data.news %}
       {% endif %}
       {% if site.posts_on_home > 0 %}
-      <div>
+      <div style="display:inline">
         <h2 style="display:inline">NEWS</h2>
       </div>
 
