--- a/_includes/card.html
+++ b/_includes/card.html
@@ -14,8 +14,8 @@
   </a> -->
 
   <div class="card-body position-relative">
-    <h7 class="card-subtitle">{{ item.date }}</h7>
-    <h6 class="card-title">
+    <h7 class="card-title">{{ item.date }}</h7>
+    <h6 class="card-subtitle">
       <!-- <a class="stretched-link" href="{{ item.url | relative_url }}">{{ item.title }}</a> -->
       {{ item.title }}
     </h6>
