--- a/_includes/card.html
+++ b/_includes/card.html
@@ -15,10 +15,10 @@
 
   <div class="card-body position-relative">
     <h7 class="card-title">{{ item.date }}</h7>
-    <h6 class="card-subtitle">
-      <!-- <a class="stretched-link" href="{{ item.url | relative_url }}">{{ item.title }}</a> -->
+<!--     <h6 class="card-subtitle">
+      <a class="stretched-link" href="{{ item.url | relative_url }}">{{ item.title }}</a>
       {{ item.title }}
-    </h6>
+    </h6> -->
 
       
 
