--- a/_includes/card.html
+++ b/_includes/card.html
@@ -25,7 +25,9 @@
     <div class="card-text">
       <h6>
       {% if item.description %}
+        <a class="stretched-link" href="{{ item.url | relative_url }}">
         {{ item.description | markdownify | strip_html | truncatewords: 20 }}
+        </a>
       {% else %}
         {{ item.excerpt | strip_html | truncatewords: 20 }}
       {% endif %}
