--- a/_layouts/news.html
+++ b/_layouts/news.html
@@ -10,6 +10,7 @@ description: Template for a list of posts as cards, with full width.
   </div>
 </div>
     <div class="row cards mt-3">
+      <h2>NEWS</h2>
       {% for item in site.data.news %}
         <div class="col-md-6  col-lg-3">
           {% include card.html %}
