--- a/_includes/card.html
+++ b/_includes/card.html
@@ -25,7 +25,7 @@
     <div class="card-text">
       <h6>
       {% if item.description %}
-        <a class="stretched-link" href="{{ item.url }} target="_blank"">
+        <a class="stretched-link" href="{{ item.url }} target="_blank">
         {{ item.description | markdownify | strip_html | truncatewords: 20 }}
         </a>
       {% else %}
