--- a/_includes/card.html
+++ b/_includes/card.html
@@ -22,7 +22,7 @@
 
       
 
-    <div class="card-text">
+<!--     <div class="card-text">
       <h6>
       {% if item.description %}
         <a class="stretched-link" href="{{ item.url }}>{{ item.description | markdownify | strip_html | truncatewords: 20 }}</a>
@@ -30,7 +30,7 @@
         {{ item.excerpt | strip_html | truncatewords: 20 }}
       {% endif %}
     </h6>
-    </div>
+    </div> -->
   </div>
 
   {% if item.collection == 'posts' and item.tags and site.archive_permalink %}
