--- a/_includes/card.html
+++ b/_includes/card.html
@@ -26,7 +26,7 @@
       <h6>
       {% if item.description %}
         <a target="_blank" class="stretched-link" href="{{ item.url }}">
-          {{ item.description | markdownify | strip_html | truncatewords: 20 }}
+          {{ item.title | markdownify | strip_html | truncatewords: 20 }}
           </a>
       {% else %}
         {{ item.excerpt | strip_html | truncatewords: 20 }}
