--- a/_layouts/news.html
+++ b/_layouts/news.html
@@ -4,16 +4,31 @@ description: Template for a list of posts as cards, with full width.
 ---
 
 <div class="row">
-  <div class="col">
+  <div class="{% if two_col %}col{% else %}col-md-10 col-lg-8 mx-auto{% endif %}">
+    <div class="row">
+      <div class="col">
 
-    {{ content }}
-  </div>
-</div>
-    <div class="row cards mt-3">
-      <h2>NEWS</h2>
-      {% for item in site.data.news %}
-        <div class="col-md-6  col-lg-3">
-          {% include card.html %}
+        {{ content }}
+
+      </div>
+
+      {% if two_col %}
+        <div class="col-lg-4">
+          <a class="twitter-timeline" data-height="500" data-link-color="{{ site.colors.links }}" href="https://twitter.com/{{ site.social.twitter }}?ref_src=twsrc%5Etfw">
+            Tweets by {{ site.social.twitter }}
+          </a>
+          <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
-      {% endfor %}
+      {% endif %}
     </div>
+    
+    {% if site.posts_on_home > 0 %}
+      <div class="row cards mt-4">
+        {% for item in site.posts limit:site.posts_on_home %}
+          <div class="col-md-6{% if two_col %} col-lg-4{% endif %}">
+            {% include card.html %}
+          </div>
+        {% endfor %}
+      </div>
+    {% endif %}
+</div>
