--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,37 +24,22 @@ remark: See also page.layout == 'home' in head.html and header.html.
       </div>
 
       {% if two_col %}
-    
-      {% if page.news and site.data[page.news] %}
-        {% assign news = site.data[page.news] %}
-      {% elsif site.data.news %}
-        {% assign news = site.data.news %}
-      {% endif %}
-      {% if site.posts_on_home > 0 %}
-        
-
-      <div class="col-lg-4 cards" style="margin-top:30px">
-        <h3 style="display:inline">NEWS</h3>
-        {% for item in news limit:site.posts_on_home %}
-          <!-- <div class="col-md-4  col-lg-4"> -->
-            {% include card.html %}
-          <!-- </div> -->
-        {% endfor %}
-      </div>
-      {% endif %}
-      </div>
-    {% endif %}
-      <!-- {% if two_col %}
         <div class="col-lg-4">
           <a class="twitter-timeline" data-height="500" data-link-color="{{ site.colors.links }}" href="https://twitter.com/{{ site.social.twitter }}?ref_src=twsrc%5Etfw">
             Tweets by {{ site.social.twitter }}
           </a>
           <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
-      {% endif %}  -->
-      
+      {% endif %}
+    </div>
     
-    
-    
-   
+    {% if site.posts_on_home > 0 %}
+      <div class="row cards mt-4">
+        {% for item in site.posts limit:site.posts_on_home %}
+          <div class="col-md-6{% if two_col %} col-lg-4{% endif %}">
+            {% include card.html %}
+          </div>
+        {% endfor %}
+      </div>
+    {% endif %}
 </div>
