--- a/_layouts/news.html
+++ b/_layouts/news.html
@@ -13,12 +13,12 @@ description: Template for a list of posts as cards, with full width.
       </div>
 
       {% if two_col %}
-        <div class="col-lg-4">
+<!--         <div class="col-lg-4">
           <a class="twitter-timeline" data-height="500" data-link-color="{{ site.colors.links }}" href="https://twitter.com/{{ site.social.twitter }}?ref_src=twsrc%5Etfw">
             Tweets by {{ site.social.twitter }}
           </a>
           <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-        </div>
+        </div> -->
       {% endif %}
     </div>
     
