--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,6 +12,9 @@ remark: See also page.layout == 'home' in head.html and header.html.
         {% assign news = site.data.news %}
       {% endif %}
 
+{% if site.tweets_on_home and site.social.twitter %}
+  {% assign two_col = true %}
+{% endif %}
 
 <!-- <div class="petite-intro">
   <p>
