--- a/_includes/card.html
+++ b/_includes/card.html
@@ -5,33 +5,29 @@
 {% endif %}
 
 <div class="card" data-tags="{% for tag in item.tags %}{{ tag | downcase | strip }}|{% endfor %}">
-  <!-- <a href="{{ item.url | relative_url }}">
+  <a href="{{ item.url | relative_url }}">
     {% if item.background %}
       <img class="card-img-top" src="{{ background | relative_url }}" alt="Background image">  
     {% else %}
       <div class="card-img-top bg-secondary"></div>
     {% endif %}
-  </a> -->
+  </a>
 
   <div class="card-body position-relative">
-    <h7 class="card-title">{{ item.date }}</h7>
-<!--     <h6 class="card-subtitle">
+    <h5 class="card-title">
       <a class="stretched-link" href="{{ item.url | relative_url }}">{{ item.title }}</a>
-      {{ item.title }}
-    </h6> -->
+    </h5>
 
-      
+    {% if item.collection == 'posts' %}
+      <h6 class="card-subtitle">{{ item.date | date: '%B %d, %Y' }}</h6>
+    {% endif %}
 
     <div class="card-text">
-      <h6>
-      {% if item.title %}
-        <a target="_blank" class="stretched-link" href="{{ item.url }}">
-          {{ item.title | markdownify | strip_html | truncatewords: 20 }}
-          </a>
+      {% if item.description %}
+        {{ item.description | markdownify | strip_html | truncatewords: 20 }}
       {% else %}
         {{ item.excerpt | strip_html | truncatewords: 20 }}
       {% endif %}
-    </h6>
     </div>
   </div>
 
