--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -47,6 +47,7 @@ remark: See also page.layout == 'home' in head.html and header.html.
     
     {% if site.posts_on_home > 0 %}
       <div class="row cards mt-4">
+              <h2>NEWS</h2>
         {% for item in news limit:site.posts_on_home %}
           <div class="col-md-6{% if two_col %} col-lg-4{% endif %}">
             {% include card.html %}
