--- a/_includes/card.html
+++ b/_includes/card.html
@@ -5,7 +5,7 @@
 {% endif %}
 
 <div class="card" data-tags="{% for tag in item.tags %}{{ tag | downcase | strip }}|{% endfor %}">
-  <a href="{{ item.url | relative_url }}">
+  <a target="_blank" href="{{ item.url | relative_url }}">
     {% if item.background %}
       <img class="card-img-top" src="{{ background | relative_url }}" alt="Background image">  
     {% else %}
