--- a/_sass/bootstrap/_reboot.scss
+++ b/_sass/bootstrap/_reboot.scss
@@ -248,7 +248,7 @@ sup { top: -.5em; }
 // Links
 
 a {
-  color: $link-color;
+  color: black;
   text-decoration: $link-decoration;
 
   &:hover {
