--- a/_includes/card.html
+++ b/_includes/card.html
@@ -19,7 +19,7 @@
     </h5>
 
 <!--     {% if item.collection == 'posts' %} -->
-      <h6 class="card-subtitle">{{ item.date | date: '%B %d, %Y' }}</h6>
+      <h6 class="card-subtitle">{{ item.date }}</h6>
 <!--     {% endif %} -->
 
     <div class="card-text">
