--- a/_includes/card.html
+++ b/_includes/card.html
@@ -6,8 +6,8 @@
 
 <div class="card" data-tags="{% for tag in item.tags %}{{ tag | downcase | strip }}|{% endfor %}">
   <a  href="{{ item.url | relative_url }}" target="_blank">
-    {% if item.background %}
-      <img class="card-img-top" src="{{ background | relative_url }}" alt="Background image">  
+    {% if item.image %}
+      <img class="card-img-top" src="{{ item.image | relative_url }}" alt="Background image">  
     {% else %}
       <div class="card-img-top bg-secondary"></div>
     {% endif %}
