--- a/_includes/card.html
+++ b/_includes/card.html
@@ -15,7 +15,7 @@
 
   <div class="card-body position-relative">
     <h5 class="card-title">
-      <a class="stretched-link" href="{{ item.url | relative_url }}" target="_blank">{{ item.title }}</a>
+      <span>{{ item.date }}:</span></span><a class="stretched-link" href="{{ item.url | relative_url }}" target="_blank">{{ item.title }}</a>
     </h5>
 
 <!--     {% if item.collection == 'posts' %} -->
