--- a/_includes/card.html
+++ b/_includes/card.html
@@ -14,7 +14,7 @@
   </a>
 
   <div class="card-body position-relative">
-    <h5 class="card-title" style="display: inline;>
+    <h5 class="card-title" style="display: inline;">
       <span>{{ item.date }} : </span>
     </h5>
     <a class="stretched-link" href="{{ item.url | relative_url }}" target="_blank">{{ item.title }}</a>
