--- a/_layouts/news.html
+++ b/_layouts/news.html
@@ -30,7 +30,7 @@ description: Template for a list of posts as cards, with full width.
     
     {% if site.posts_on_home > 0 %}
       <div class="row cards mt-4">
-        {% for item in news limit:site.posts_on_home %}
+        {% for item in news %}
           <div class="col-md-6{% if two_col %} col-lg-4{% endif %}">
             {% include card.html %}
           </div>
