--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -8,9 +8,10 @@
   background-size: cover;
   border-radius: 0; // Should always be square, independent from $enable-rounded
   color: $black;
-  margin-bottom: 2rem;
+  // margin-bottom: 2rem;
   // padding: 2rem 1rem;
-  padding-top: 6rem;
+  // padding-top: 6rem;
+  padding-top: 7%;
   padding-left: 1rem;
   padding-right: 1rem;
   // padding-bottom: 2rem;
