--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -10,8 +10,8 @@
   color: $black;
   // margin-bottom: 2rem;
   // padding: 2rem 1rem;
-  // padding-top: 6rem;
-  padding-top: 7%;
+  padding-top: 6rem;
+  // padding-top: 7%;
   padding-left: 1rem;
   padding-right: 1rem;
   // padding-bottom: 2rem;
