--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -8,7 +8,7 @@
   background-size: cover;
   border-radius: 0; // Should always be square, independent from $enable-rounded
   color: $black;
-  // margin-bottom: 2rem;
+  margin-bottom: 1rem;
   // padding: 2rem 1rem;
   padding-top: 8rem;
   // padding-top: 7%;
